# discocal

./: .depcheckrc  .editorconfig  .eslintrc.json  .gitignore  CMakeLists.txt  CNAME  Dockerfile  Gemfile  LICENSE  Makefile  Pipfile  README.md  _config-dev.yml  _config.yml  convert_ply_for_pcl.py  convert_ply_into_pcd.py  docker-compose.yaml  docker-compose.yml  dockerfile  dockerfile-dev  dockerfile-lidar  dockerfile_discocal  jekyll-theme-read-the-docs.gemspec  package.json  pyinstaller_build.sh  requirements.txt  updateReadme.sh
.bash/: settings.conf
.bash/incl/: .shebang.txt  _aliases.sh  _colors.sh  _debug.sh  _homebrew.sh  _set.sh  all.sh
.bash/osx/: gem.sh  jekyll.sh  npm.sh  pipenv.sh  yarn.sh
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
.github/workflows_disabled/: ci.yml  codeql@v2.yml
_includes/common/: analytics_gdpr_compliant.liquid  google_adsense_gtag.liquid  google_site_verification.liquid  links.liquid  mermaid.liquid  opengraph.liquid  twitter_cards.liquid
_includes/common/assets/: sw.caches.js
_includes/common/core/: _list.liquid  list.liquid
_includes/rest/: defaults.liquid  script.liquid
_includes/templates/: _toctree.liquid  breadcrumbs.liquid  footer.liquid  toctree.liquid
_layouts/: default.liquid
_sass/: _direction.scss  _font-face.scss  theme.scss
_sass/lib/@primer/css/buttons/: button.scss
_sass/lib/@primer/css/support/variables/: typography.scss
_sass/lib/@primer/css/utilities/: typography.scss
_sass/lib/material-design-lite/: _mixins.scss  _variables.scss
_sass/lib/rouge/: github.scss
_sass/main/: README.md  _variables.scss  main.scss
assets/: 404.liquid  search.liquid
codes/: extrinsic.yaml  intrinsic.yaml
config/: lidar.yaml  mono.yaml  stereo.yaml
config_example/: mono.yaml  stereo.yaml  stereo_rgb12.yaml
default_format/test/: index.md  mentions.md
default_format/test_long/: README.md
docs/: Paper_in_Kor.md
extrinsic_result/: camera0_intrinsic.yaml  camera1_intrinsic.yaml  relative_camera_poses.txt
include/: CCalibrator.h  CCircleGridFinder.hpp  CFunctors.h  CImagehandler.h  CLidarextrinsic.h  CLieAlgebra.h  CMomentsTracker.h  CStereoCalibrator.h  CTargetDetector.h  Lidarparam.h  lidar.hpp  mono.hpp  stereo copy.hpp  stereo.hpp  utils.h
include/tabulate/: asciidoc_exporter.hpp  cell.hpp  color.hpp  column.hpp  column_format.hpp  exporter.hpp  font_align.hpp  font_style.hpp  format.hpp  latex_exporter.hpp  markdown_exporter.hpp  optional_lite.hpp  printer.hpp  row.hpp  string_view_lite.hpp  table.hpp  table_internal.hpp  tabulate.hpp  termcolor.hpp  utf8.hpp  variant_lite.hpp
index/: Applications.md  Calibrator.md  Detector.md  Guidance.md  HowToRun.md  LiDAR_cal.md  Paper_in_Kor.md  Why.md  Why_discocal.md  avatar.md  markdown.md  mermaid.md
runfiles/: docker-compose.yml  dockerfile  run_mono.py
sample_data/lidars/: point_cloud_000.pcd  point_cloud_001.pcd  point_cloud_002.pcd  point_cloud_003.pcd  point_cloud_004.pcd  point_cloud_005.pcd  point_cloud_006.pcd  point_cloud_007.pcd
sample_data/raw_ply/: point_cloud_000.ply  point_cloud_001.ply  point_cloud_002.ply  point_cloud_003.ply  point_cloud_004.ply  point_cloud_005.ply  point_cloud_006.ply  point_cloud_007.ply
sample_data/viz_check/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_3.ply  boundary_pcd.ply  debug_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_0/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_1/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_2/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_3/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_4/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_5/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_6/: best_cluster_0.ply  best_cluster_1.ply  best_cluster_2.ply  best_cluster_3.ply  boundary_pcd.ply  filtered_cloud.ply  most_planar_cluster.ply  projected_cloud.ply
sample_data/viz_check/cloud_7/: best_cluster_2.ply  filtered_cloud.ply
sample_imgs/rgb12/left/: calibration_result.yaml
sample_imgs/rgb12/right/: calibration_result.yaml
sample_imgs/tir12/: calibration_result.yaml
src/: CCalibrator.cpp  CCalibrator.h  CCircleGridFinder.hpp  CLieAlgebra.cpp  CLieAlgebra.h  CMomentumTracker.cpp  CMomentumTracker.h  CTargetDetector.cpp  CTargetDetector.h  main.cpp  main_bind.cpp  main_exp.cpp  main_lidar.cpp  main_mono.cpp  main_stereo.cpp  mono.cpp  stereo.cpp
src/includes/: CCalibrator.h  CMomentsTracker.h  CTargetDetector.h  utils.h
src/lib_calib/: CCalibrator.cpp  CLieAlgebra.cpp  CMakeLists.txt  CMomentsTracker.cpp  CStereoCalibrator.cpp
src/lib_detect/: CCircleGridFinder.cpp  CMakeLists.txt  CTargetDetector.cpp
src/lib_lidar/: CLidarextrinsic.cpp  CMakeLists.txt
src/lib_utils/: CImagehandler.cpp  CMakeLists.txt
src/python/: evaluation.py  run_lidar.py  run_mono.py  run_stereo.py
